# flatpak_python

./: pyproject.toml
scripts/: init_all_flatpak_apps.ipynb  list_all_apps_on_flathub.ipynb  regenerate_api.sh
src/flathub_python_api/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
src/flathub_python_api/.openapi-generator/: FILES
src/flathub_python_api/docs/: AppApi.md  AppOfTheDay.md  AppOfTheWeek.md  AppPickRecommendation.md  AppPickRecommendationsResponse.md  AppPicksApi.md  AppRoutesInvitesDevelopersResponse.md  AppSearchDevelopersResponse.md  AppType.md  AppsIndex.md  AppsOfTheWeek.md  ArchiveRequest.md  AuthApi.md  AuthInfo.md  Auths.md  AvailableLoginMethodStatus.md  AvailableMethod.md  AvailableMethodType.md  AvailableMethods.md  BodyGetDownloadTokenPurchasesGenerateDownloadTokenPost.md  BuildNotificationRequest.md  CheckPurchasesResponseSuccess.md  CollectionApi.md  CompatApi.md  ConnectedAccountProvider.md  Data.md  DefaultAccount.md  DeleteUserResult.md  Developer.md  EmailApi.md  ErrorDetail.md  ErrorReturn.md  FailedByGuideline.md  FavoriteApp.md  FeedApi.md  Filter.md  FlathubUsersResult.md  GenerateUpdateTokenResponse.md  GetDeleteUserResult.md  GetDownloadTokenResponse.md  (+102 more)
src/flathub_python_api/flathub_python_api/: __init__.py  api_client.py  configuration.py  rest.py
src/flathub_python_api/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/flathub_python_api/test/: test_app_api.py  test_app_of_the_day.py  test_auths.py  (+139 more)
src/flatpak_python/: client.py
tests/: test_general.py
(+215 files in other folders)
