[tool.poetry]
name = "flatpak-python"
version = "0.1.0"
description = ""
authors = ["Alexander Lukens <alexdlukens@gmail.com>"]
readme = "README.md"

packages = [
    { include = "flatpak_python", from = "src" },
    { include = "flathub_python_api", from = "src/flathub_python_api" },
]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
pydantic = "^2.11.7"
urllib3 = ">=2.1.0,<3.0.0"
python-dateutil = ">=2.8.2"
typing-extensions = ">=4.7.1"
catalogd-api-client = {git = "ssh://git@github.com/alexdlukens/catalogd-api-client-python.git", rev = "postgresql"}
cdifflib = "^1.2.9"
enlighten = "^1.14.1"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
pytest = "^8.4.1"
openapi-generator-cli = "^7.13.0.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
